[package]
name = "chessbot"
version = "0.2.0"
edition = "2021"
authors = ["Jacob Oakman"]

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
colored = "2.0.0"
derive_more = "0.99.17"
eyre = "0.6.8"
futures = "0.3.26"
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.7.1"
serde_json = "1.0.93"
thirtyfour = "0.31.0"
tokio = "1.25.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
